fix feedback btn alignment

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -43,8 +43,7 @@ h2{font-size:1.8em}
 .button-white{background:White;color:Black}
 .button-black{background:Black;color:White}
 .feedback-popop,.feedback-button{position:fixed}
-.feedback-button{z-index:2000;bottom:1em;right:1em;font-weight:600;font-size:20px;cursor:pointer;width:24px;height:24px;border:2px solid #000;-webkit-border-radius:50%;-moz-border-radius:50%;-o-border-radius:50%;border-radius:50%;}
-.feedback-button span{display:inline-block;position:relative;left:6px;bottom:3px}
+.feedback-button{z-index:2000;bottom:1em;right:1em;font-weight:600;font-size:22px;text-align:center;line-height:1;cursor:pointer;width:24px;height:24px;padding:4px;background:White;border:2px solid #000;-webkit-border-radius:50%;-moz-border-radius:50%;-o-border-radius:50%;border-radius:50%}
 .feedback-popop{display:none;z-index:2001;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);}
 .feedback-popop.show{display:block}
 .feedback-form{position:absolute;left:50%;top:0;margin-left:-160px;background:White;text-align:center;width:320px;height:480px;}
