--- a/styles/components/feedback.styl
+++ b/styles/components/feedback.styl
@@ -8,17 +8,16 @@
   bottom 1em
   right 1em
   font-weight 600
-  font-size 20px
+  font-size 22px
+  text-align center
+  line-height 1
   cursor pointer
   width 24px
   height 24px
+  padding 4px
+  background White
   border 2px solid black
   border-radius 50%
-  span
-    display inline-block
-    position relative
-    left 6px
-    bottom 3px
 
 .feedback-popop
   display none
